# zeroeval-sdk

./: .gitignore  INSTALLATION.md  INTEGRATIONS.md  README.md  TASK_AUTO_CREATION.md  clean_branch.sh  pyproject.toml  pytest.ini  test_sampling_correct.py  test_sampling_debug.py  test_sampling_fix.py  tox.ini
.cursor/rules/: documentation.mdc  testing.mdc
.github/: README.md
.github/workflows/: ci.yml  ruff.yml  tests.yml  typecheck.yml
.venv-prod/: pyvenv.cfg
.venv-test/: pyvenv.cfg
docs/: PRD-Prompt-Library.md  PRD-ze-prompt-integration.md  evaluation_system_proposal.md
examples/: 01-tracing.py  01.py  02-class.py  04-decorator.py  README.md  datasets.0.py  datasets.1.multimodal.py  datasets.1.py  datasets.2.py  datasets.3.py  datasets.4.py  datasets.5.py  datasets.6.multimodal.py  experiments.0.py  experiments.1.multimodal.py  experiments.1.py  experiments.2.multimodal.py  experiments.2.py  experiments.3.py  experiments.4.py  experiments.4.stream.py  experiments.5.py  experiments.6.multimodal.py  langchain_extended_trace_example.py  langchain_llmchain_blog_pipeline.py  langchain_trace_example.py  langgraph_advanced_demo.py  langgraph_demo.py  langgraph_tags_demo.py  langgraph_web_research_agent.py  signals_demo.py  test_async_signals.py  test_langgraph_tracing.py  tracing.0.1.small-spans.py  tracing.0.py  tracing.1.py  tracing_advanced.py
examples_v2/: .env.example  README.md
examples_v2/ab_testing/: comedian_ab_test.py  openai_ab_test.py
examples_v2/structured_outputs/: README.md  bookstore_agent_pydantic.py
examples_v2/tracing/: disabled_integrations_repro.py  openai_basic.py  openai_with_spans.py  output_bella_italia.html  output_morning_brew.html
examples_v2/tuning/: README.md  auto_prompt_optimization.py  bookstore_agent.py  bookstore_agent_with_api_feedback.py  bookstore_agent_with_feedback.py  test_judge_span_feedback.py
src/zeroeval/: __init__.py  cache.py  client.py  errors.py  providers.py  pyproject.toml  template.py  types.py
src/zeroeval/cli/: main.py  runner.py  setup.py  utils.py
src/zeroeval/core/: __init__.py  dataset_class.py  decorators.py  evaluation.py  evaluator_class.py  experiment_class.py  init.py  metrics.py  reader.py  run.py  run_collection.py  task.py  writer.py
src/zeroeval/observability/: __init__.py  choice.py  decorators.py  signal_sender.py  signals.py  span.py  tracer.py  utils.py  writer.py
src/zeroeval/observability/integrations/: base.py  registry.py  utils.py
src/zeroeval/observability/integrations/gemini/: integration.py
src/zeroeval/observability/integrations/httpx/: README.md  __init__.py  integration.py
src/zeroeval/observability/integrations/langchain/: integration.py
src/zeroeval/observability/integrations/langgraph/: integration.py
src/zeroeval/observability/integrations/livekit/: __init__.py  integration.py
src/zeroeval/observability/integrations/openai/: integration.py
src/zeroeval/observability/integrations/pydanticai/: __init__.py  integration.py
src/zeroeval/observability/integrations/vocode/: __init__.py  integration.py  streaming_tracker.py
src/zeroeval/utils/: hash.py
tests/: README.md  conftest.py  test_choice.py  test_client_feedback.py  test_compatibility.py  test_core.py  test_gemini_compatibility.py  test_gemini_integration.py  test_httpx_integration.py  test_httpx_performance.py  test_pydanticai_integration.py  test_vocode_integration.py
tests/core/: test_decorator.py  test_integration_teardown.py  test_langgraph_integration_setup.py  test_tracer.py
tests/observability/: conftest.py  test_decorator.py  test_tracer.py
tests/performance/: test_span_performance.py
