[project]
name = "zeroeval"
version = "0.6.7"
description = "ZeroEval SDK"
readme = "README.md"
authors = [
    {name = "Sebastian Crossa", email = "seb@zeroeval.com"},
    {name = "Jonathan Chavez", email = "jona@zeroeval.com"}
]
requires-python = ">=3.9,<4.0"
dependencies = [
    "rich >=13.9.4, <14.0.0",
    "opentelemetry-api >=1.30.0, <2.0.0",
    "opentelemetry-sdk >=1.30.0, <2.0.0",
    "requests >=2.32.3, <3.0.0",
    "openai>=1.59.6",
    "pillow >=10.0.0, <11.0.0",
    "aiohttp >=3.8.0, <4.0.0",
    "numpy>=2.0.2",
    "langfuse>=3.2.1",
    "opentelemetry-exporter-otlp-proto-http>=1.34.1",
    "dotenv>=0.9.9",
]
keywords = ["evaluation", "LLM", "observability"]

[project.urls]
Repository = "https://github.com/zeroeval"

[project.scripts]
zeroeval = "zeroeval.cli:main"

[dependency-groups]
dev = [
    "mypy>=1.16.1",
    "pytest >=8.2.2, <9.0.0",
    "pytest-asyncio >=0.23.7, <1.0.0",
    "ruff >=0.12.2, <1.0.0",
    "tox >=4.0.0, <5.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/zeroeval"]

[tool.uv]
default-groups = []

[tool.uv.sources]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.ruff]
# Set target Python version
target-version = "py39"
line-length = 88

[tool.ruff.lint]
# Enable Flake8 `E` and `F` codes by default + some additional rules
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "I",    # isort
]
ignore = [
    "E501",  # line too long, handled by formatter
]

[tool.ruff.lint.isort]
known-first-party = ["zeroeval"]
